fix overflow and make message not repeat too soon

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
     font-family: ui-sans-serif,-apple-system,system-ui,Segoe UI,Helvetica,Apple Color Emoji,Arial,sans-serif,Segoe UI Emoji,Segoe UI Symbol;
 }
 
@@ -28,12 +28,11 @@ body {
 }
 
 #content {
-    height: 100%;
+    height: 100vh;
     width: 84ch;
     max-width: calc(100% - 2em);
     display: flex;
     flex-direction: column;
-    align-items: space-between;
 }
 
 #main {
@@ -42,15 +41,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 0;
 }
 
 #messages {
+    flex: 1;
     width: 100%;
     display: flex;
-    flex: 2;
     flex-direction: column;
     overflow-y: scroll;
-    padding: 0 1em;
 }
 
 #messages:empty {
@@ -71,6 +70,8 @@ body {
 
 .message {
     margin-bottom: 0.3em;
+    margin-right: 2em;
+    margin-left: 2em;
 }
 
 .message.human {
